--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         tools:ignore="AllowBackup">
 
-        <activity android:name=".activity.SignUp"
+        <activity android:name=".activity.SignUpActivity"
             android:theme="@style/AppTheme.SignUp" />
 
         <meta-data
