--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         tools:ignore="AllowBackup">
-        <activity android:name=".activity.registration.VerifyEmailActivity"
-            android:theme="@style/AppTheme"/>
+        <activity android:name=".activity.registration.UpdatePasswordActivity"></activity>
+        <activity
+            android:name=".activity.registration.VerifyEmailActivity"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.registration.ForgotPasswordActivity"
             android:theme="@style/AppTheme.SignUp" />
