--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         tools:ignore="AllowBackup">
-        <activity android:name=".activity.registration.UpdatePasswordActivity"></activity>
+        <activity android:name=".activity.registration.UpdatePasswordActivity" android:theme="@style/AppTheme.SignUp"/>
         <activity
             android:name=".activity.registration.VerifyEmailActivity"
             android:theme="@style/AppTheme" />
